# SSEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  roadmap.md
.github/workflows/: ci.yml
build-tests/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CTestTestfile.cmake  Continuous.vcxproj  Continuous.vcxproj.filters  DartConfiguration.tcl  Experimental.vcxproj  Experimental.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  Nightly.vcxproj  Nightly.vcxproj.filters  NightlyMemoryCheck.vcxproj  NightlyMemoryCheck.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  SSEngine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build-tests/Testing/Temporary/: CTestCostData.txt
build-tests/lib/Debug/: gtest_main.lib
build-tests/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  sdalgorithm.vcxproj  sdalgorithm.vcxproj.filters  sdconsole.vcxproj  sdconsole.vcxproj.filters  sddb.vcxproj  sddb.vcxproj.filters  sddebugviewer.vcxproj  sddebugviewer.vcxproj.filters  sdgate.vcxproj  sdgate.vcxproj.filters  sdlogger.vcxproj  sdlogger.vcxproj.filters  sdnet.vcxproj  sdnet.vcxproj.filters  sdpipe.vcxproj  sdpipe.vcxproj.filters  sdsysteminfo.vcxproj  sdsysteminfo.vcxproj.filters  sdu.vcxproj  sdu.vcxproj.filters
build-tests/src/Debug/: sdalgorithm.lib  sdconsole.lib  sddb.lib  sddebugviewer.lib  sdgate.lib  sdlogger.lib  sdnet.lib  sdpipe.lib  sdsysteminfo.lib
build-tests/tests/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake  sse_tests.vcxproj  sse_tests.vcxproj.filters  sse_tests[1]_include.cmake  sse_tests[1]_tests.cmake
build-tests/tests/Testing/Temporary/: LastTest.log.tmp1f4d8
build-tests/tests/sse_tests.dir/Debug/: sse_tests.exe.recipe
build-tests/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
docs/: HEADERS.md
include/: localcharset.h  sdatomic.h  sdconfig.h  sddb_ver.h  sdfile.h  sdidpool.h  sdlock.h  sdmemorypool.h  sdmutex.h  sdobjectpool.h  sdprocess.h  sdshmem.h  sdsingleton.h  sdstring.h  sdthread.h  sdu.h  sdutf8.h  sscp.h  tinyxml.h
include/algorithm/: sdcrc.h
include/detail/: sdfifodqueue.h  sdiniconfigure.h
include/include/: sdconfigure.h  sddatastream.h  sdfifo.h  sdlimit.h  sdmacros.h  sdmath.h  sdrandom.h  sdregex.h  sdthreadpool.h  sdtimer.h  sdtranslate.h  sdutil.h
include/include/algorithm/: sdmd5.h
include/include/detail/: sdiniconfig.h  sdmapconfigure.h  sdobject_dqueue_allocator.h
include/ssengine/: sdatomic.h  sdbase.h  sdcondition.h  sdconfig.h  sdconfigure.h  sdconsole.h  sddataqueue.h  sddatastream.h  sddb.h  sddb_ver.h  sddebugviewer.h  sddir.h  sderrno.h  sdfifo.h  sdfile.h  sdfilemapping.h  sdgate.h  sdhashmap.h  sdindexer.h  sdlimit.h  sdlock.h  sdlogger.h  sdloopbuffer.h  sdmacros.h  sdmath.h  sdmemorypool.h  sdmutex.h  sdnet.h  sdnet_ver.h  sdnetopt.h  sdnetutils.h  sdobjectpool.h  sdpipe.h  sdpkg.h  sdprocess.h  sdrandom.h  sdregex.h  sdserverid.h  sdshm.h  sdshmem.h  (+14 more)
include/ssengine/algorithm/: sdcrc.h  sddes.h  sdmd5.h  sdstrencrypt.h
include/ssengine/detail/: sdfifodqueue.h  sdfifoqueue.h  sdindexer_impl.h  sdiniconfig.h  sdiniconfigure.h  sdobject_allocator_ex.h  sdxmlconfigure.h
src/: CMakeLists.txt
src/algorithm/: sdcrc.cpp  sddes.cpp  sdmd5.cpp  sdstrencrypt.cpp
src/sdconsole/: console_module.cpp  placeholder.cpp
src/sddb/: placeholder.cpp  sddb_module.cpp
src/sddebugviewer/: debugviewer_module.cpp  placeholder.cpp
src/sdgate/: gate_module.cpp  placeholder.cpp
src/sdlogger/: csdlogger.cpp  file_logger_win.cpp  tcp_logger_win.cpp  udp_logger_win.cpp
src/sdnet/: linux_sdnet.cpp  placeholder.cpp  win_sdnet.cpp
src/sdpipe/: pipe_module.cpp  placeholder.cpp
src/sdsysteminfo/: placeholder.cpp  systeminfo_module.cpp
src/sdu/: placeholder.cpp  sdatomic.cpp  sdcondition.cpp  sdconfig.cpp  sdconfigure.cpp  sdcsvfile.cpp  sddataqueue.cpp  sddatastream.cpp  sddir.cpp  sdfifo.cpp  sdfile.cpp  sdfilemapping.cpp  sdidpool.cpp  sdindexer.cpp  sdloopbuffer.cpp  sdmemorypool.cpp  sdmutex.cpp  sdnetutils.cpp  sdobject_allocator.cpp  sdprocess.cpp  sdrandom.cpp  sdregex.cpp  sdserverid.cpp  sdshm.cpp  sdshmem.cpp  sdstring.cpp  sdthread.cpp  sdthreadctrl.cpp  sdthreadpool.cpp  sdtime.cpp  sdtimer.cpp  sdtranslate.cpp
tests/: CMakeLists.txt  test_sdalgorithm.cpp  test_sdatomic.cpp  test_sdcondition.cpp  test_sdconfig.cpp  test_sdcsvfile.cpp  test_sddataqueue.cpp  test_sddatastream.cpp  test_sddir.cpp  test_sdfifo.cpp  test_sdfile.cpp  test_sdfilemapping.cpp  test_sdhashmap.cpp  test_sdidpool.cpp  test_sdindexer.cpp  test_sdlogger.cpp  test_sdloopbuffer.cpp  test_sdmemorypool.cpp  test_sdmutex.cpp  test_sdnet.cpp  test_sdnet_client_close.cpp  test_sdnet_close.cpp  test_sdnet_delay_send.cpp  test_sdnet_reconnect.cpp  test_sdnet_roundtrip.cpp  test_sdnet_sdpkg.cpp  test_sdnetopt.cpp  test_sdnetutils.cpp  test_sdobjectpool.cpp  test_sdpipe_remove.cpp  test_sdpipe_replace.cpp  test_sdpipe_report.cpp  test_sdpipe_roundtrip.cpp  test_sdpipe_whitelist.cpp  test_sdprocess.cpp  test_sdrandom.cpp  test_sdregex.cpp  test_sdshm.cpp  test_sdshmem.cpp  test_sdstring.cpp  (+6 more)
win32/include/: sdbase.h  sdconsole.h  sdgate.h  sdlogger.h  sdnet.h  sdnetopt.h  sdshm.h  sdsysteminfo.h  sdthreadctrl.h
win32/include/include/: sddataqueue.h  sderrno.h  sdfilemapping.h  sdhashmap.h  sdindexer.h  sdnetutils.h  sdserverid.h  sdstring.h  sdtime.h  sdtimer.h  sdtype.h
win32/libs/: sschannel.lib  sschanneld.lib  sscom.lib  sscomd.lib  ssconsole.lib  ssconsoled.lib  sslog.lib  sslogd.lib  sssql.lib  sssqld.lib  ssu.lib
win64/include/: sddb.h  sdnet_ver.h  sdpipe.h  vercheck.h
win64/include/include/: sdcondition.h  sdcsvfile.h  sddebug.h  sddir.h  sdfilemapping.h  sdloopbuffer.h  sdtype.h
win64/lib/: sdcommon.lib  sdcommon_d.lib  sdconsole.lib  sdconsole_d.lib  sddb.lib  sddb_d.lib  sddbmod.lib  sddbmod_d.lib  sdgate.lib  sdgate_d.lib  sdlogger.lib  sdlogger_d.lib  sdnet.lib  sdnetmod.lib  sdnetmod_d.lib  sdpipe.lib
(+98 files in other folders)
